# cisco-vqe-client

./: .cproject  .gitignore  .project  LICENSE.txt  Makefile  README  configure  configure.in  configure.mips  configure.sh4  depend.mk  environ.mk.in  vqe.mk  vqe_builds.mk
add-ons/include/: MODBUILD.mk  event.h  tree.h  upnp.h
cfg/: BUILD  cfg_channel.c  cfg_channel.h  cfg_config.c  cfg_database.c  cfg_database.h  cfg_gen.c  cfg_utests.c  cfg_utests.h  cfg_xml.c  cfgapi.h  configuration_test.c  configuration_update.c  cunit4cfg.c  sdp-in-dos-fmt.cfg  sdpconv.c  sdpconv.h  supported_modes.cfg  update.cfg  vam.cfg
eva/: BUILD  Doxyfile  rtp_era_recv.c  rtp_era_recv.h  rtp_repair_recv.c  rtp_repair_recv.h  update_version.sh  vqe_port.c  vqec_assert_macros.h  vqec_cfg2xml.pl  vqec_cfg_decl.h  vqec_cfg_limits.h  vqec_cfg_macros.h  vqec_cfg_settings.h  vqec_cfggen.pl  vqec_channel.c  vqec_channel_api.h  vqec_channel_cli.c  vqec_channel_private.h  vqec_cli.c  vqec_cli.h  vqec_cli_interface.c  vqec_cli_interface.h  vqec_cli_register.c  vqec_cli_register.h  vqec_config_parser.c  vqec_config_parser.h  vqec_drop.c  vqec_drop.h  vqec_elog.c  vqec_elog.h  vqec_gap_reporter.c  vqec_gap_reporter.h  vqec_gaptree.c  vqec_gaptree.h  vqec_ifclient.c  vqec_ifclient.h  vqec_ifclient_defs.h  vqec_ifclient_fcc.c  vqec_ifclient_fcc.h  (+32 more)
eva/sample/: BUILD  sample-chan-config.cfg  sample-vqec-config.conf  test_vqec_ifclient.c
eva/utest/: BUILD  test_kmod_vqec_utest_main.c  test_kmod_vqec_utest_main.h  test_kmod_vqec_utest_rpc.c  test_vqec_utest_bitmap.c  test_vqec_utest_cfg.c  test_vqec_utest_channel.c  test_vqec_utest_cli.c  test_vqec_utest_configparser.c  test_vqec_utest_debug.c  test_vqec_utest_drop.c  test_vqec_utest_event.c  test_vqec_utest_failover.c  test_vqec_utest_gap_reporter.c  test_vqec_utest_gaptree.c  test_vqec_utest_hash.c  test_vqec_utest_heap.c  test_vqec_utest_ifclient.c  test_vqec_utest_igmp.c  test_vqec_utest_log.c  test_vqec_utest_main.c  test_vqec_utest_main.h  test_vqec_utest_nat.c  test_vqec_utest_pak.c  test_vqec_utest_pak_seq.c  test_vqec_utest_port.c  test_vqec_utest_recv_socket.c  test_vqec_utest_rtp.c  test_vqec_utest_seq_num.c  test_vqec_utest_sm.c  test_vqec_utest_stream_output.c  test_vqec_utest_stun_mgr.c  test_vqec_utest_tuner.c  test_vqec_utest_upcall.c  test_vqec_utest_updater.c  test_vqec_utest_url.c
eva/vqec-dp/: BUILD  MODBUILD.mk  Makefile  vqec-dp-make.mk  vqec_debug_cp.c  vqec_dp_api.h  vqec_dp_api_types.h  vqec_dp_common.h  vqec_dp_debug.c  vqec_dp_debug.h  vqec_dp_debug_flags.h  vqec_dp_debug_utils.c  vqec_dp_debug_utils.h  vqec_dp_event_counter.h  vqec_dp_graph.c  vqec_dp_graph.h  vqec_dp_io_stream.c  vqec_dp_io_stream.h  vqec_dp_refcnt.h  vqec_dp_syslog.c  vqec_dp_syslog_def.h  vqec_dp_tlm.c  vqec_dp_tlm.h  vqec_dp_tlm_cnt_decl.h  vqec_dp_utils.c  vqec_dp_utils.h
include/log/: IntroTextAlone.html  MODBUILD.mk  Makefile  ex_syslog_def.h  libdebug.h  libdebug_macros.h  stunsvr_debug.h  stunsvr_debug_flags.h  stunsvr_syslog_def.h  syslog.h  syslog_all_const.h  syslog_doc.pl  syslog_docgen  syslog_docgen.h  syslog_facility_num.h  syslog_macros.h  syslog_macros_types.h  vqe_cfg_debug.h  vqe_cfg_debug_flags.h  vqe_cfg_syslog_def.h  vqe_id.h  vqe_rpc_debug.h  vqe_rpc_debug_flags.h  vqe_rpc_syslog_def.h  vqe_rtp_debug.h  vqe_rtp_debug_flags.h  vqe_rtp_syslog_def.h  vqe_rtsp_debug.h  vqe_rtsp_debug_flags.h  vqe_rtsp_syslog_def.h  vqe_utils_syslog_def.h  vqes_cfgtool_syslog_def.h  vqes_cp_debug.h  vqes_cp_debug_flags.h  (+19 more)
pkgconfig/: Makefile.am  vqe-c.pc.in
rtp/: BUILD  MODBUILD.mk  fec_fast_type.h  rcc_tlv.c  rcc_tlv.h  rtcp.h  rtcp_bandwidth.c  rtcp_bandwidth.h  rtcp_memory.c  rtcp_memory.h  rtcp_pkt_api.h  rtcp_statistics.c  rtcp_statistics.h  rtcp_stats_api.c  rtcp_stats_api.h  rtcp_testxr.c  rtcp_xr.c  rtcp_xr.h  rtp.h  rtp_asm.c  rtp_asm.h  rtp_database.c  rtp_database.h  rtp_header.c  rtp_header.h  rtp_ptp.c  rtp_ptp.h  rtp_random.c  rtp_session.c  rtp_session.h  rtp_ssm_rsi.c  rtp_ssm_rsi.h  rtp_ssm_rsi_fbt.c  rtp_ssm_rsi_fbt.h  rtp_ssm_rsi_rcvr.c  rtp_ssm_rsi_rcvr.h  rtp_ssm_rsi_source.c  rtp_ssm_rsi_source.h  rtp_syslog.c  rtp_syslog.h  (+13 more)
rtspclient/: BUILD  VQEChanCfgServer.cfg  cunit4rtspclient.c  multi_rtsp_requests.c  res_copy.c  res_free.c  res_info.c  res_info.h  res_parse.c  res_print.c  resparse.3  rr-internal.h  rr.h  rtsp_client.c  rtsp_client.h  rtsp_debug.c  rtspclient_utests.c  rtspclient_utests.h  srv_lookup.c  srv_lookup.h  test_rtsp.c  testres.c  vam.cfg
sdp/: BUILD  README  channel_config.c  msg_sdp.c  sample_video.sdp  sdp.h  sdp_access.c  sdp_attr.c  sdp_attr_access.c  sdp_base64.c  sdp_base64.h  sdp_config.c  sdp_main.c  sdp_os_defs.h  sdp_private.h  sdp_services_ios.c  sdp_services_unix.c  sdp_test.c  sdp_test_all.c  sdp_token.c  sdp_utils.c
stun/: BUILD  readme.txt  stun.h  stun_hmac.c  stun_includes.h  stun_msg.c  stun_parse.c  stun_private.h  stun_socket.c  stun_socket.h  test_stun_client.c  test_stun_parser.c  test_stun_server.c  transaction_id.c  transaction_id.h
stunclient/: BUILD  vqec_hybrid_nat_mgr.c  vqec_hybrid_nat_mgr.h  vqec_nat_api.h  vqec_stun_mgr.c  vqec_upnp_mgr.c
utils/: BUILD  MODBUILD.mk  fbt_addr_test.c  id_manager.c  id_manager_private.h  id_manager_test.c  raw_packet.c  raw_socket.c  shm_api.c  socket_filter.c  strlcat.c  strlcpy.c  update_version.sh  vam_debug.c  vam_debug_test.c  vam_hist.c  vam_hist_test.c  vam_ipc.c  vam_time.c  vam_time_test.c  vam_util.c  vam_util_test.c  vmd5.c  vqe_bitmap.c  vqe_caps.c  vqe_hash.c  vqe_pcap.c  vqe_token_bucket.c  vqe_token_bucket_testmain.c  vqe_token_bucket_tests.c  vqes_fbt_addr.c  zone_mgr.c  zone_mgr_test.c
vqec_obj/: Makefile  vqec.mk
vqecutils/: BUILD  MODBUILD.mk  Makefile  test_vqec_interposers_common.c  test_vqec_interposers_common.h  utilsmake.mk  vqec_debug.c  vqec_debug.h  vqec_debug_flags.h  vqec_error.h  vqec_error_macros.h  vqec_event.c  vqec_event.h  vqec_ifclient_read.h  vqec_lock.h  vqec_pak.c  vqec_pak.h  vqec_pak_hdr.h  vqec_pak_seq.c  vqec_pak_seq.h  vqec_recv_socket.c  vqec_recv_socket.h  vqec_seq_num.h  vqec_syslog_def.h
(+693 files in other folders)
